--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 $ cat .gitattributes
+src/main/resources/static/* linguist-vendored
+project-docs/* linguist-documentation
 *.rb linguist-language=Arduino
